[project]
name = "drifting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.2.0",
    "diffusers>=0.32.0",
    "huggingface-hub>=0.28.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=11.0.0",
    "scipy>=1.15.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.0",
]
